# atomic-workflows

./: .dockstore.yml  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  multiome_pipeline.wdl
.github/workflows/: build-docker-chromap.yml  build-docker-kallisto-bustools.yml  docker-image.yml
WDL/: Dockerfile
assays/: README.md
assays/10x-RNA-ATAC/: spec.md
assays/10x-RNA-v2/: README.md  example.ipynb  spec.md
bin_files/: atac_generate_merged_barcode_metadata.sh  compute_tss_enrichment.py  create_sample_filtered_fragment_file.sh  generate_insert_size_histogram_data.sh  joint_cell_plotting.py  joint_cell_plotting_density.R  merge_chromap_logs.sh  rna_modify_kb_count_output_barcode_h5.py  rna_plot_qc_metrics.R  run_chromap_map_to_index.sh  run_gunzip.sh  seqspec_retrieve_onlist.sh  write_html.py
dockerfiles/: deprecated_task_cellatlas_build.dockerfile  share_task_correct_fastq.dockerfile  task_cellatlas_rna.dockerfile  task_chromap.dockerfile  task_html_report.dockerfile  task_joint_qc.dockerfile  task_kb.dockerfile  task_log_rna.dockerfile  task_qc_atac.dockerfile  task_qc_rna.dockerfile  task_seqspec_extract.dockerfile  task_synapse.dockerfile
modules/igvf-chromap/: README.md  docker_builder.dockerfile  pyproject.toml  run_chromap.py
modules/igvf-kallisto-bustools/: .dockerignore  README.md  docker_builder.dockerfile  pyproject.toml  run_kallisto.py
modules/igvf-kallisto-bustools/docs/: README.md
modules/igvf-kallisto-bustools/tests/: test_run_kallisto.py
src/notebooks/: convert_gtf_chromosome_names.py  pyproject.toml
tasks/: 10x_create_barcode_mapping.wdl  10x_task_preprocess.wdl  share_task_correct_fastq.wdl  share_task_trim_fastqs_atac.wdl  task_cellatlas_build.wdl  task_cellatlas_rna.wdl  task_check_inputs.wdl  task_chromap.wdl  task_chromap_bam.wdl  task_html_report.wdl  task_joint_qc.wdl  task_kb.wdl  task_kb_count.wdl  task_kb_index.wdl  task_log_atac.wdl  task_log_rna.wdl  task_qc_atac.wdl  task_qc_rna.wdl  task_query_syn.wdl  task_sample_fastqs.wdl  task_seqspec_extract.wdl
workflows/: subwf_atac.wdl  subwf_cellatlas_rna  subwf_cellatlas_rna.wdl  subwf_check_inputs_synapse.wdl  subwf_chromap_index.wdl  subwf_kb_index.wdl  subwf_rna.wdl  subwf_sample_fastqs.wdl  subwf_share_correct_fastq.wdl
(+1030 files in other folders)
