[project]
name = "igvf-kallisto-bustools"
version = "1.1.0"
description = "Align scRNA using kallisto-bustools"
requires-python = "==3.10.16"
dependencies = [
    "click>=8.1.7",
    "kb-python==0.29.1",
    "anndata==0.11.1",
    "numpy==2.1.3",
    "h5py==3.12.1"
]

[project.scripts]
run_kallisto = "run_kallisto:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "run_kallisto"